fix: serialize checkpoint retries and cancel departing DSL validation